# Work

./: CLICKHOUSE_SETUP.md  DATABASE_OVERVIEW.md  DB_STATUS.md  Dockerfile  IMPLEMENTATION_RESULTS.md  IMPLEMENTATION_SUMMARY.md  Jenkinsfile  Makefile  QUICK_START_CLICKHOUSE.md  QUICK_TEST.sh  README.md  README_CSV_EXPORT.md  SERVER_DEPLOYMENT.md  SPRINT_25_TEST_RESULTS.json  SPRINT_25_TEST_RESULTS.md  __init__.py  click_house.py  config.py  connect_clickhouse.py  create_dataframe.py  create_sample_df.py  docker-compose.test.yml  docker-compose.yml  explore_clickhouse.py  export_dataframe_csv.py  get_dataframe.py  import_clickhouse_data.py  pyproject.toml  query_table.py  requirements.txt  sample_dataframe.py  sample_df.py  show_sample_df.py  start_api.sh  test_clickhouse_connection.py  test_docker.sh  test_implementations.py  test_sprint25_complete.py
api/: __init__.py  grpc_server.py
audit_logs/: chain_hash.txt
db/: __init__.py  connection.py  models.py  models_extended.py
docs/: ARCHITECTURE.md  COMPLIANCE.md  QUICKSTART.md  acceptance_criteria.md
k8s/: README.md  argocd-application.yaml  configmap.yaml  deployment.yaml  flagger-canary.yaml  hpa.yaml  ingress.yaml  pdb.yaml  rollout.yaml  secret-template.yaml  service.yaml  tls-setup.md
models/: __init__.py  embeddings.py  virality_model.pkl  virality_predictor.py
monitoring/: fluentbit.conf  prometheus.yml
scripts/: performance_test.py  run_scoring_on_csv.py  score_full_clickhouse.py  server_setup.sh  train_on_full_clickhouse.py  train_virality_model_from_csv.py
services/: __init__.py
utils/: audit.py  (+11 more)
(+26 files in other folders)
